--- a/docker/report-template.html
+++ b/docker/report-template.html
@@ -33,7 +33,7 @@
 RPS:<strong>{{ rps }}</strong> Failures: <strong>{{ fails }}</strong>
 </p>
 <h2>Statistics</h2>
-<div class="container">
+<div class="container" id="statistics">
     {% for row in stat_data %}
     <div class="column">
         <div class="header row">{{stat_headers[loop.index0]}}</div>
