--- a/docker/report-template.html
+++ b/docker/report-template.html
@@ -47,7 +47,7 @@ RPS:<strong>{{ rps }}</strong> Failures: <strong>{{ fails }}</strong>
 </div>
 
 <h2>Distribution</h2>
-<div class="container">
+<div class="container" id="distribution">
     {% for row in dist_data %}
     <div class="column">
         <div class="header row">{{dist_headers[loop.index0]}}</div>
