ci: adds github action for building and testing docker image [AUTO-62] (#37)
* ci: adds github action for building and testing docker image

* ci: fixes path

* ci: updates paths

* ci: corrects path

* temp: remove check

* fix: adds env section

* fix: moves the env section

* Update publish-docker-image.yml

* ci: adds test

* ci: remove -s

* ci: adds pull stage

* ci: adds cache from

* ci: trying to fix cache

* ci: trying to fix caching

* ci: adds back pull step

* ci: trying to fix cache

* fix

* test

* fix

* echo docker version

* echo

* ci: adds publish step

* adds docker login

* ordering

* yml

* fix: only push images when there are changes

This reverts commit c972f158cf5055a30316790b00b395d626b0fb5c.

* revert and test without buildkit

* Revert "revert and test without buildkit"

This reverts commit 24bf2641a90dc5acabb33f8838363b50c3af1091.

* fix: removing empty lines

* fix

* fix: only push to master

* fix: bake locust-master into the image

--- a/docker/report-template.html
+++ b/docker/report-template.html
@@ -33,7 +33,7 @@
 RPS:<strong>{{ rps }}</strong> Failures: <strong>{{ fails }}</strong>
 </p>
 <h2>Statistics</h2>
-<div class="container">
+<div class="container" id="statistics">
     {% for row in stat_data %}
     <div class="column">
         <div class="header row">{{stat_headers[loop.index0]}}</div>
@@ -47,7 +47,7 @@ RPS:<strong>{{ rps }}</strong> Failures: <strong>{{ fails }}</strong>
 </div>
 
 <h2>Distribution</h2>
-<div class="container">
+<div class="container" id="distribution">
     {% for row in dist_data %}
     <div class="column">
         <div class="header row">{{dist_headers[loop.index0]}}</div>
@@ -61,7 +61,7 @@ RPS:<strong>{{ rps }}</strong> Failures: <strong>{{ fails }}</strong>
 </div>
 
 <h2>Failures</h2>
-<div class="container">
+<div class="container" id="failures">
     {% for row in e_data %}
     <div class="column">
         <div class="header row">{{e_headers[loop.index0]}}</div>
