--- a/docker/report-template.html
+++ b/docker/report-template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
     <style type="text/css">
         .container {
           display:flex;
@@ -22,6 +22,7 @@
           color: black;
           font-weight: 900;
         }
+
     </style>
 </head>
 <title>Load Test Report</title>
